--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "test": "nyc --reporter=text mocha --exit",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start-production": "NODE_ENV=production node server.js"
   }
 }
